examples/valid/17_type_alias_header_multiple_parameters.lane
// Valid: one alias parameter header may contain multiple binders.

module Examples.Valid17

import Basic.Ops.*

import Basic.Io.{Io, Write}

pub type Left[A, _B] = A

pub let left_value : Left[Int, Bool] = 42

pub fn answer() -> Unit ! Io {
  if left_value == 42 {
    Write::println!("42")
  } else {
    Write::println!("bad:42")
  }
}
