examples/invalid/21_type_alias_empty_parameter_header.lane
// Invalid: a type alias parameter header must be non-empty.

module Examples.Invalid21
pub type Empty[] = Int

pub let answer : Int = 42
